# FastMovieMaker

./: .gitignore  AGENTS.md  CLAUDE.md  DECISION_TREE.md  FastMovieMaker.spec  LICENSE  PHASE4_PLAN.md  PROGRESS.md  README.md  TECHSPEC.md  TESTING.md  TODO.md  build_macos.sh  build_windows.bat  clean.sh  main.py  pyproject.toml  requirements.txt  run.sh  setup.bat  setup.sh  test.sh  test_after_tts.py  test_playhead_during_playback.py  test_real_scenario.py  test_timeline_click.py
.claude/: settings.local.json
.githooks/: pre-push
.github/: pull_request_template.md
commands/: orchestrate.md  plan.md  verify.md
docs/: DECISION_LOG.md  DEVELOPER_GUIDE.md  HARDWARE_ACCELERATION.md  ORCHESTRATION_COMMANDS.md  ORCHESTRATION_EXAMPLES.md  ORCHESTRATION_TEMPLATE.md  README.md  TTS_USAGE.md  TTS_USAGE_EN.md
scripts/: benchmark_project_io.py  generate_default_templates.py  generate_icon.py  pre_push_checks.sh  sync_test_counts.py  verify_apv_pipeline.py  verify_apv_secret_ready.py
tests/: conftest.py  test_anim2_cc2.py  test_apv_smoke.py  test_audio_extractor.py  test_audio_regenerator_integration.py  test_audio_timeline.py  test_auto_align.py  test_batch_export.py  test_batch_tts_dialog.py  test_batch_tts_worker.py  test_bgm_selection.py  test_cancel_crash.py  test_clip_color_label.py  test_color_correction.py  test_controllers.py  test_ducking_service.py  test_elevenlabs_tts_service.py  test_export2.py  test_export_dialog_status.py  test_export_integration.py  test_fixes_verification.py  test_frame_snap.py  test_gpt_script_service.py  test_i18n.py  test_models.py  (+58 more)
(+134 files in other folders)
