[project]
name = "FastMovieMaker"
version = "0.4.1"
description = "Whisper-based automatic subtitle video editor"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7.0",
    "faster-whisper>=1.0.0",
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "edge-tts>=7.2.0",
    "imageio-ffmpeg>=0.5.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
]
